# workbench-bridges

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish.yml
examples/: invoke_endpoint.py
scripts/: endpoint_inference_launch.py  endpoint_with_requests.py  inference_store_schema_change.py
src/sageworks_bridges/: __init__.py
src/sageworks_bridges/aws/: df_store.py  parameter_store.py  sagemaker_session.py  sm_session.py
src/sageworks_bridges/endpoints/: fast_inference.py
src/sageworks_bridges/utils/: logger.py
src/workbench_bridges/: __init__.py
src/workbench_bridges/api/: __init__.py  df_store.py  inference_store.py  parameter_store.py  public_data.py
src/workbench_bridges/aws/: sagemaker_session.py
src/workbench_bridges/core/: parameter_store_core.py
src/workbench_bridges/endpoints/: async_inference.py  fast_inference.py
src/workbench_bridges/utils/: athena_utils.py  aws_utils.py  logger.py
tests/api/: inference_store_tests.py  param_store_tests.py  public_data_tests.py
tests/aws/: aws_account_clamp_tests.py  df_store_tests.py  param_store_tests.py  sm_session_tests.py
tests/utils/: aws_utils_tests.py  datetime_utils_tests.py  execution_env_tests.py  glue_utils_tests.py  json_utils_tests.py  logger_tests.py
